Test adding new page

--- a/_data/sidebars/mydoc_sidebar.yml
+++ b/_data/sidebars/mydoc_sidebar.yml
@@ -31,6 +31,10 @@ entries:
     - title: Introduction
       url: /mydoc_introduction.html
       output: web, pdf
+   
+    - title: Week one
+      url: /mydoc_week_one.html
+      output: web, pdf
 
     - title: Supported features
       url: /mydoc_supported_features.html
