--- a/_config.yml
+++ b/_config.yml
@@ -35,7 +35,7 @@ exclude:
 
 feedback_subject_line: Java & FTC
 
-feedback_email: tomjoht@gmail.com
+feedback_email: ram.bethina@gmail.com
 # used as a contact email for the Feedback link in the top navigation bar
 
 # feedback_disable: true
