week seven content

--- a/_data/sidebars/mydoc_sidebar.yml
+++ b/_data/sidebars/mydoc_sidebar.yml
@@ -41,6 +41,9 @@ entries:
     - title: Week Six
       url: /mydoc_week_six.html
       output: web, pdf
+    - title: Week Seven
+      url: /mydoc_week_seven.html
+      output: web, pdf
 
 
 
