week nine - init content

--- a/_data/sidebars/mydoc_sidebar.yml
+++ b/_data/sidebars/mydoc_sidebar.yml
@@ -47,6 +47,9 @@ entries:
     - title: Week Eight
       url: /mydoc_week_eight.html
       output: web, pdf
+    - title: Week Nine
+      url: /mydoc_week_nine.html
+      output: web, pdf
 
 
 
